# KDEAirPods

./: CMakeLists.txt  README.md
package/: metadata.json
package/contents/ui/: BatteryItem.qml  main.qml
plugin/: CMakeLists.txt  KDEAirPods.cpp  KDEAirPods.hpp  airpodsHandler.cpp  airpodsHandler.hpp  batteryStatus.cpp  batteryStatus.hpp  qmldir
plugin/backend/: CMakeLists.txt  Device.cpp  Device.h  DeviceAnc.h  DevicesInfoFetcher.cpp  DevicesInfoFetcher.h  Event.h
plugin/backend/aap/: Aap.cpp  Aap.h  AapClient.cpp  AapClient.h
src/: Device.cpp  Device.h  DeviceAnc.cpp  DeviceBattery.cpp  DeviceBattery.h  DevicesInfoFetcher.cpp  DevicesInfoFetcher.h  StringUtils.h
src/aap/: Aap.h  AapClient.h
